--- a/Clases/Clases.csproj
+++ b/Clases/Clases.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Cita.cs" />
     <Compile Include="Cola.cs" />
     <Compile Include="GestorTurnos.cs" />
+    <Compile Include="HistorialAtencion.cs" />
     <Compile Include="NodoArbol.cs" />
     <Compile Include="NodoCola.cs" />
     <Compile Include="Paciente.cs" />
